[package]
name = "redditui"
version = "0.1.0"
edition = "2024"
description = "Browse reddit in a TUI!"
license = "MIT"
readme = "README.md"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
clap = { version = "4.5.60", features = ["derive"] }
